improve login button position and fix off screen button on less common form factors

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -50,7 +50,7 @@ video{
     align-items: center;
     justify-content: bottom;
     backdrop-filter: blur(5px);
-    margin-top: 0px;
+    margin-top: 250px;
     margin-bottom: 300px;
     width: 100%;
 
@@ -66,7 +66,7 @@ video{
         align-items: center;
         justify-content: bottom;
         backdrop-filter: blur(5px);
-        margin-bottom: 30vh;
+        margin-bottom: 50vh;
     }
     .divLoginInput2{
         width: 500px;
@@ -78,6 +78,7 @@ video{
         justify-content: bottom;
         backdrop-filter: blur(5px);
         margin-bottom: 30vh;
+        margin-top: 0px;
     }
 }
 
@@ -97,10 +98,9 @@ video{
         width: 400px;
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 20px;
-
         backdrop-filter: blur(5px);
         margin-left: 425px;
-        margin-top: -182.5px;
+        margin-top: -105px;
         font-size: 15px;
     }
 }
